# perplex_num

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Perplex.md  README.md
.github/workflows/: coverage.yml
benches/: multiplication.rs
examples/: visualize_functions.rs  visualize_hyperbolic_sectors.rs  visualize_perplex.rs  visualize_polar.rs
src/: binary_ops.rs  lib.rs  matrix.rs  perplex.rs  polar.rs  repr_as_matrix.rs  single_ops.rs
