[package]
authors = ["Tom Krüger"]
description = "Perplex (hyperbolic or split-complex) numbers based on num-traits"
documentation = "https://docs.rs/perplex_num"
homepage = "https://github.com/tomtuamnuq/perplex_num"
keywords = ["perplex-numbers", "hyperbolic-geometry", "algebra", "split-complex", "minkowski"]
categories = ["algorithms", "mathematics", "simulation"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tomtuamnuq/perplex_num"
name = "perplex_num"
version = "0.1.0"
readme = "README.md"
edition = "2021"
rust-version = "1.76"

[dependencies]
approx = "0.5.1"
num-traits = "0.2.18" 
nalgebra = { version = "0.32.4", optional = true }

[dev-dependencies]
criterion = "0.5.1"
plotters = "0.3.5"

[features]
default = ["matrix"]
matrix = ["dep:nalgebra"]

[[bench]]
name = "multiplication"
harness = false
